# cmock_example

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  file_names  makefile  mock_names  run  run_tests  test_mocks_depend
src/: add_test  calculator.c  calculator.h  main.c  multiply.h
test/: add_test  test_add.c  test_calculator.c  test_multiply.c
test/test_runners/: test_add_runner.c
